--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
     "require": {
+        "phenx/php-font-lib": "^1.0",
+        "phenx/php-svg-lib": "^1.0",
         "dompdf/dompdf": "^3.0"
     }
 }
